--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,11 @@
 version: '3'
 services:
+  kibana:
+    image: kibana:6.6.0
+    ports: 
+    - "5601:5601"
+    environment:
+    - "elasticsearch.hosts=http://elasticsearch:9200"
   elasticsearch:
     image: elasticsearch:6.6.0
     ports: 
